Fix broken layout

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -58,7 +58,7 @@
 
 .amb-provider {
   font-size: x-small;
-  position: relative;
-  top: 15px;
-  left: -144px;
+  position: absolute;
+  top: 30px;
+  left: 55px;
 }
